package ec.edu.uees.tutorias.factory;

public interface Notificador {

    void enviarNotificacion(String mensaje);

}